workloads/tabs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tabs
  namespace: tabs
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - tabs.ndsquared.net
  rules:
    - backendRefs:
        - name: tabs
          port: 80
